# g2oCalibration

./: BAEngine.cpp  BAEngine.h  CMakeLists.txt  IntrCamerapointEdge.h  IntrinsicNode.h  README.md  README_en.md  baConstraint.h  calibrateInit.cpp  calibrateInit.h  calibrator.cpp  calibrator.h  cameraPoint.h  cornerReadInterface.h  cvCornerRead.cpp  cvCornerReader.h  cvFindHomography.cpp  cvFindHomography.h  externalVertex.h  extrinsicTranspose.cpp  extrinsicTranspose.h  findHomography.h  getHMatByAxis.h  homographyConstraint.cpp  homographyConstraint.h  homographyDecompose.h  initExtrinsic.h  intrinsicInverse.cpp  intrinsicInverse.h  intrinsicTranspose.cpp  intrinsicTranspose.h  main.cpp  optimizerInit.cpp  optimizerInit.h  scene.h  totalIntrEdge.h  totalIntrinsic.h  types.h  worldPoint.h
testModule/: CMakeLists.txt  IntrCampointEdgeTest.cpp  baConstraintTest.cpp  baEngineCompileTest.cpp  calibrateTest.cpp  camPointTest.cpp  cornerReadTest.cpp  externalVertexTest.cpp  findHomographyTest.cpp  homographyConstraintTest.cpp  homographyDecomposeTest.cpp  initCalibratorTest.cpp  initExtrinsicTest.cpp  readme.md  simpleIntrEdgeTest.cpp  testIntrinsic.cpp  testToalIntrinsic.cpp  totalIntrEdgeTest.cpp  twoConstrcinTest.cpp
